--- a/core/chat/templates/chatroom.html
+++ b/core/chat/templates/chatroom.html
@@ -1,46 +1,113 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Chat App</title>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" type="text/css" rel="stylesheet">
+<link href="{% static 'css/style.css' %}", type="text/css", rel="stylesheet">
+
+
 </head>
 <body>
-
-    <textarea id="chat-text" cols="80" rows="30"></textarea><br>
-    <input id="input" type="text" size="80">
-    <input id="submit" type="button" value="Send">
-
     <script>
         const roomName = "{{ room_name }}"
         const username = "{{ request.user }}"
-
-        document.getElementById("submit").onclick = function (e) {
-            const messageInputDom = document.getElementById("input")
-            const message = messageInputDom.value
-            chatSocket.send(JSON.stringify({
-                "message": message,
-                "username": username
-            }))
-
-            messageInputDom.value = ""
-        }
-
-        const chatSocket = new WebSocket(
-            "ws://" +
-            window.location.host +
-            "/ws/chat/" +
-            roomName + 
-            "/"
-        )
-
-        chatSocket.onmessage = function (e) {
-            const data = JSON.parse(e.data)
-            console.log(data)
-            document.getElementById("chat-text").innerHTML += (data.username +
-            ":\t" + data.message + "\n")
-        } 
+        const roomHash = "{{ room_hash }}"
+        var contacts = JSON.parse("{{ contacts_json|escapejs }}")
     </script>
+
+<div class="container">
+<h3 class=" text-center">Messaging</h3>
+<div class="messaging">
+      <div class="inbox_msg">
+        <div class="inbox_people">
+          <div class="headind_srch">
+            <div class="recent_heading">
+              <h4>Recent</h4>
+            </div>
+            <div class="srch_bar">
+              <div class="stylish-input-group">
+                <input type="text" class="search-bar"  placeholder="Search" >
+                <span class="input-group-addon">
+                <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                </span> </div>
+            </div>
+          </div>
+          {% for contact in contacts %}
+          <div class="inbox_chat">
+            <div class="chat_list active_chat">
+              <div class="chat_people">
+                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                <div class="chat_ib">
+                  <h5>{{ contact }} <span class="chat_date"></span></h5>
+                  <p>Test, which is a new approach to have all solutions 
+                    astrology under one roof.</p>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+
+            
+          </div>
+        </div>
+
+
+
+        <div class="mesgs" >
+          <div class="msg_history" id="chat-history" data-contact="{{ contacts.0 }}"> 
+          
+          </div>
+          <div class="type_msg">
+            <div class="input_msg_write">
+              <input type="text" class="write_msg" placeholder="Type a message" id="input"/>
+              <button id="send-button" class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      
+      <p class="text-center top_spac"> Developed by <a href="https://github.com/Bialomazur">Kamil Bialomazur</a></p>
+      
+    </div></div>
+<div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 200px;">
+    <div style="position: absolute; top: 0; right: 0;">
+        <div class="toast" id="toast" role="alert" aria-live="assertive" aria-atomic="true">
     
+    <div class="toast-header">
+        <strong id="toast-sender" class="mr-auto">Notification</strong>
+        <small  class="text-muted"></small>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="toast-body" id="toast-message">
+        You Received a new message!
+    </div>
+    </div>
+</div>
+</div>
+
+
+
+<script src="{% static 'js/script.js' %}" ></script>
+<script>
+
+$(document).ready(() => {
+    $('#toast').toast('show')
+})
+
+</script>
+
 </body>
 </html>
